code/typescript/FixedIncomeCalculation/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Fixed Income Calculation client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.13.0-blue)](https://developer.factset.com/api-catalog/fixed-income-calculation-api)
[![npm](https://img.shields.io/npm/v/@factset/sdk-fixedincomecalculation)](https://www.npmjs.com/package/@factset/sdk-fixedincomecalculation)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.13.0
- SDK version: 2.0.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-fixedincomecalculation@2.0.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-fixedincomecalculation@2.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, DiscountCurvesApi } = require('@factset/sdk-fixedincomecalculation');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new DiscountCurvesApi();
const opts = {
  'currency': "currency_example" // String | 
};

// Call api endpoint
apiInstance.getAllFIDiscountCurves(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-fixedincomecalculation');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/engines/fi/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*fixedincomecalculation.DiscountCurvesApi* | [**getAllFIDiscountCurves**](docs/DiscountCurvesApi.md#getAllFIDiscountCurves) | **GET** /discount-curves | Get Discount Curves
*fixedincomecalculation.FICalculationsApi* | [**cancelCalculationById**](docs/FICalculationsApi.md#cancelCalculationById) | **DELETE** /calculations/{id} | Cancel FI calculation by id
*fixedincomecalculation.FICalculationsApi* | [**getCalculationParameters**](docs/FICalculationsApi.md#getCalculationParameters) | **GET** /calculations/{id} | Get FI calculation parameters by id
*fixedincomecalculation.FICalculationsApi* | [**getCalculationResult**](docs/FICalculationsApi.md#getCalculationResult) | **GET** /calculations/{id}/result | Get FI calculation result by id
*fixedincomecalculation.FICalculationsApi* | [**getCalculationStatusById**](docs/FICalculationsApi.md#getCalculationStatusById) | **GET** /calculations/{id}/status | Get FI calculation status by id
*fixedincomecalculation.FICalculationsApi* | [**postAndCalculate**](docs/FICalculationsApi.md#postAndCalculate) | **POST** /calculations | Create and Run FI calculation
*fixedincomecalculation.FICalculationsApi* | [**putAndCalculate**](docs/FICalculationsApi.md#putAndCalculate) | **PUT** /calculations/{id} | Create or Update FI calculation and run it.


## Documentation for Models

 - [fixedincomecalculation.CalculationInfo](docs/CalculationInfo.md)
 - [fixedincomecalculation.CalculationInfoRoot](docs/CalculationInfoRoot.md)
 - [fixedincomecalculation.CalculationMeta](docs/CalculationMeta.md)
 - [fixedincomecalculation.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [fixedincomecalculation.Error](docs/Error.md)
 - [fixedincomecalculation.ErrorSource](docs/ErrorSource.md)
 - [fixedincomecalculation.FIAttributionForJobSettings](docs/FIAttributionForJobSettings.md)
 - [fixedincomecalculation.FIAttributionForSecurities](docs/FIAttributionForSecurities.md)
 - [fixedincomecalculation.FIBalloonExtension](docs/FIBalloonExtension.md)
 - [fixedincomecalculation.FIBankLoans](docs/FIBankLoans.md)
 - [fixedincomecalculation.FICalculationParameters](docs/FICalculationParameters.md)
 - [fixedincomecalculation.FICalculationParametersRoot](docs/FICalculationParametersRoot.md)
 - [fixedincomecalculation.FICashflows](docs/FICashflows.md)
 - [fixedincomecalculation.FIConvertibleSettings](docs/FIConvertibleSettings.md)
 - [fixedincomecalculation.FIDiscountCurveInfo](docs/FIDiscountCurveInfo.md)
 - [fixedincomecalculation.FIDiscountCurveInfoRoot](docs/FIDiscountCurveInfoRoot.md)
 - [fixedincomecalculation.FIJobSettings](docs/FIJobSettings.md)
 - [fixedincomecalculation.FILoss](docs/FILoss.md)
 - [fixedincomecalculation.FIMarketEnvironment](docs/FIMarketEnvironment.md)
 - [fixedincomecalculation.FIMunicipalBonds](docs/FIMunicipalBonds.md)
 - [fixedincomecalculation.FIMunicipalBondsForJobSettings](docs/FIMunicipalBondsForJobSettings.md)
 - [fixedincomecalculation.FIPrepay](docs/FIPrepay.md)
 - [fixedincomecalculation.FIPrepayLockout](docs/FIPrepayLockout.md)
 - [fixedincomecalculation.FIReferencePrepay](docs/FIReferencePrepay.md)
 - [fixedincomecalculation.FIReferenceSecurity](docs/FIReferenceSecurity.md)
 - [fixedincomecalculation.FISecurity](docs/FISecurity.md)
 - [fixedincomecalculation.FIServicerAdvances](docs/FIServicerAdvances.md)
 - [fixedincomecalculation.FIServicerAdvancesForSecurities](docs/FIServicerAdvancesForSecurities.md)
 - [fixedincomecalculation.FIStructuredProductsForJobSettings](docs/FIStructuredProductsForJobSettings.md)
 - [fixedincomecalculation.FIStructuredProductsForSecurities](docs/FIStructuredProductsForSecurities.md)
 - [fixedincomecalculation.ObjectRoot](docs/ObjectRoot.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
